finish news app

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -1,3 +1,7 @@
 {
-  "dsadas": "dasdsa"
+  "business": "business",
+  "sports": "sports",
+  "science": "science",
+  "news" : "news",
+  "articles" : "articles"
 }
