--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -1,3 +1,8 @@
 {
-  "dsadas": "dasdsa"
+  "business": " الاعمال ",
+  "sports": " الرياضة ",
+  "science": " العلوم ",
+  "news": " أخبار ",
+  "articles" : " المقالات "
+
 }
